@@ -10,22 +10,17 @@
  *******************************************************************************/
 package melnorme.lang.ide.core.utils;
 
-import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.List;
 
 import melnorme.lang.ide.core.LangCore;
 import melnorme.utilbox.misc.ArrayUtil;
 
-import org.eclipse.core.resources.IContainer;
-import org.eclipse.core.resources.IFile;
-import org.eclipse.core.resources.IFolder;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IProjectDescription;
 import org.eclipse.core.resources.IWorkspaceRoot;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
-import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.Platform;
 import org.osgi.framework.Bundle;
 import org.osgi.framework.BundleException;
@@ -71,27 +66,6 @@ public class EclipseUtils {
 		String[] newNatures = ArrayUtil.append(natures, natureID);
 		description.setNatureIds(newNatures);
 		project.setDescription(description, null); 
-	}
-	
-	public static void writeToFile(IFile file, InputStream is) throws CoreException {
-		if(file.exists()) {
-			file.setContents(is, false, false, null);
-		} else {
-			file.create(is, false, null);
-		}
-	}
-	
-	public static void createFolder(IFolder folder, boolean force, boolean local, IProgressMonitor monitor) 
-			throws CoreException {
-		if (folder.exists()) {
-			return;
-		}
-		
-		IContainer parent = folder.getParent();
-		if (parent instanceof IFolder) {
-			createFolder((IFolder) parent, force, local, monitor);
-		}
-		folder.create(force, local, monitor);
 	}
 	
 }
