@@ -1,0 +1,49 @@
+/*******************************************************************************
+ * Copyright (c) 2014, 2014 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *     Bruno Medeiros - initial API and implementation
+ *******************************************************************************/
+package melnorme.lang.ide.core.utils;
+
+import java.io.InputStream;
+
+import org.eclipse.core.resources.IContainer;
+import org.eclipse.core.resources.IFile;
+import org.eclipse.core.resources.IFolder;
+import org.eclipse.core.runtime.CoreException;
+import org.eclipse.core.runtime.IProgressMonitor;
+import org.eclipse.core.runtime.Path;
+
+public class ResourceUtils {
+
+	public static void writeToFile(IFile file, InputStream is) throws CoreException {
+		if(file.exists()) {
+			file.setContents(is, false, false, null);
+		} else {
+			file.create(is, false, null);
+		}
+	}
+
+	public static void createFolder(IFolder folder, boolean force, boolean local, IProgressMonitor monitor) 
+			throws CoreException {
+		if (folder.exists()) {
+			return;
+		}
+		
+		IContainer parent = folder.getParent();
+		if (parent instanceof IFolder) {
+			createFolder((IFolder) parent, force, local, monitor);
+		}
+		folder.create(force, local, monitor);
+	}
+	
+	public static Path getPath(java.nio.file.Path path) {
+		return new Path(path.toString());
+	}
+	
+}
