@@ -14,11 +14,12 @@
    * DLTK Model elements in Project Explorer
     * UI actions
    * get parent
+   
    * dub.json errors presenting
    * DUB program path preference.
    * automatic Compiler Library setup from DUB.
-   * Launch config
-   * review DeeLaunchShortcut
+   * Launch config use dub targets
+   * DubBasedBuilder concurrency bug
    * dub describe bug when downloading.
 
 == DDT 0.9.1 (2014-02-07) ===
